--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,16 +18,10 @@ jobs:
         with:
           php-version: '8.0'
 
-      - name: Generate Application Key
-        run: php artisan key:generate
-
-      - name: Create .env file
-        run: cp .env.example .env
-
       - name: Configure Database
         run: |
           php artisan config:cache
           php artisan migrate --force
 
       - name: Start Laravel Server
-        run: php artisan serve --host=0.0.0.0 --port=8000
+        run: php artisan serve --host=0.0.0.0
