--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,18 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.0'
+
+      - name: Install Composer Dependencies
+        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+
+      - name: Generate Application Key
+        run: php artisan key:generate
+
+      - name: Create .env File
+        run: cp .env.example .env
+
+      - name: Run Database Migrations
+        run: php artisan migrate --force
+
+      - name: Start Laravel Server
+        run: php artisan serve --host=0.0.0.0 --port=8000
