--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,28 @@
-name: Deploy Laravel Application
+name: CICD
 
 on:
   push:
-    branches:
-      - main
+    branches: [ development ]
 
 jobs:
   deploy:
+    name: Deploy 
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Set up PHP
-        run: sudo apt-get install php -y
+      - name: Composer install
+        run: composer install
 
-      - name: Install Composer Dependencies
-        run: |
-          php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-          php composer-setup.php --install-dir=/usr/local/bin --filename=composer
-          php -r "unlink('composer-setup.php');"
-          composer install --no-interaction --prefer-dist --optimize-autoloader
-
-      - name: Generate Application Key
-        run: php artisan key:generate
-
-      - name: Create .env File
-        run: cp .env.example .env
-
-      - name: Run Database Migrations
-        run: php artisan migrate --force
-
-      - name: Start Laravel Server
-        run: php artisan serve --host=0.0.0.0 --port=8000
+      - name: Deploy to development server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: | 
+            cd /var/www/html/project
+            git pull origin ${{ github.ref }}
+            composer install
+            ## Add additional commands here
