--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,12 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Deploy to development server
-        uses: appleboy/ssh-action@master
-        
+        uses: appleboy/ssh-action@master    
+          with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           
           script: | 
             cd /var/www/html/Laravel-demo
