--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,25 +2,26 @@ name: CICD
 
 on:
   push:
-    branches: [ development ]
+    branches: [ Branch ]
 
 jobs:
   deploy:
     name: Deploy 
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/development'
     steps:
       - uses: actions/checkout@v2
+      
 
       - name: Deploy to development server
-        uses: appleboy/ssh-action@master    
-         with:
+        uses: appleboy/ssh-action@master
+        with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          
           script: | 
-            cd /var/www/html/Laravel-demo
-            git pull origin ${{ github.ref }}
-            
-            
+           cd /var/www/html/Laravel-demo
+           git pull origin branch
+           
+           ##add commands
