--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,16 +2,14 @@ name: CICD
 
 on:
   push:
-    branches: [ Branch ]
+    branches: [ development ]
 
 jobs:
   deploy:
     name: Deploy 
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/development'
     steps:
       - uses: actions/checkout@v2
-      
 
       - name: Deploy to development server
         uses: appleboy/ssh-action@master
@@ -21,7 +19,5 @@ jobs:
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: | 
-           cd /var/www/html/Laravel-demo
-           git pull origin branch
-           
-           ##add commands
+            cd /var/www/html/Laravel-demo
+            git pull origin ${{ github.ref }}
