--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,15 +2,17 @@ name: CICD
 
 on:
   push:
-    branches: [ development ]
+    branches: [ Branch ]
 
 jobs:
   deploy:
     name: Deploy 
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/development'
     steps:
       - uses: actions/checkout@v2
-
+      - name: Composer install
+        run: composer install
 
       - name: Deploy to development server
         uses: appleboy/ssh-action@master
@@ -20,5 +22,7 @@ jobs:
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: | 
-            cd /var/www/html/Laravel-demo
-            git pull origin ${{ github.ref }}
+           cd /var/www/html/project
+           git pull origin branch
+           composer install
+           ##add commands
