--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: | 
-            cd /var/www/html/project
-            git pull origin main  # Pull the correct branch (development)
-            composer install
+            cd /var/www/html/Laravel-demo
+            git pull origin main  # Pull the correct branch (main)
+           
             # Add any additional commands here
