--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          
           script: | 
             cd /var/www/html/Laravel-demo
             git pull origin main  # Pull the correct branch (main)
