--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,6 @@ name: CICD
 on:
   push:
     branches: [ main ]
-  
 
 jobs:
   deploy:
@@ -13,15 +12,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - name: Deploy to development server
+      - name: multiple command
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          
-          script: | 
-            cd /var/www/html/Laravel-demo
-            git pull origin main  # Pull the correct branch (main)
-            # Add any additional commands here
+          script: |
+                whoami
+                ls -al
